--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,19 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <style>
+      .pro-sidebar .pro-menu > ul > .pro-sub-menu > .pro-inner-list-item {
+        background-color: #44003d;
+      }
+      .pro-sidebar.collapsed
+        .pro-menu
+        > ul
+        > .pro-menu-item.pro-sub-menu
+        > .pro-inner-list-item
+        > .popper-inner {
+        background-color: #44003d;
+        color: white;
+      }
+    </style>
   </body>
 </html>
