white text added on hover boxes

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,12 @@
         background-color: #44003d;
         color: white;
       }
+      .pro-inner-item {
+        color: white;
+      }
+      .pro-sidebar .pro-menu a {
+        color: white;
+      }
     </style>
   </body>
 </html>
